--- a/assets/stylesheets/public.digital.holding.scss
+++ b/assets/stylesheets/public.digital.holding.scss
@@ -40,7 +40,11 @@ body {
 	font-style: normal;
 	color: $white;
   margin:0;
-  padding:15px;
+  padding:$left-margin/4;
+
+  @include media(tablet) {
+    padding:15px 0 20px $left-margin/2;
+  }
 
   @include media(desktop) {
     padding:15px 0 20px $left-margin;
@@ -53,35 +57,38 @@ main {
 }
 
 header {
-  border-bottom:1px solid $brand-blue-alpha;
-  height:55px;
-
-  @include media(desktop) {
-    height:65px;
-  }
 
   h1 {
   	position:relative;
-	  font-size: 20px;
+	  font-size: 36px;
 	  font-family: $font_bold;
 		margin:0;
-		
+
 		.public {
 			position:absolute;
 		}
-		
+
 		.digital {
 			position:absolute;
-			top:16px;
-			left:12px;
+			top:29px;
+			left:21px;
 		}
-		
-	  @include media(desktop) {
-	    font-size: 24px;
-	    
+
+    @include media(tablet) {
+	    font-size: 48px;
+
 	    .digital {
-				top:20px;
-				left:14px;
+				top:39px;
+				left:29px;
+			}
+	  }
+
+    @include media(desktop) {
+	    font-size: 60px;
+
+	    .digital {
+				top:48px;
+				left:35px;
 			}
 	  }
   }
@@ -90,28 +97,39 @@ header {
 ul.disciplines {
 
   display:none;
+  border-left:5px solid $brand-blue-alpha;
+  padding-left: 18px;
   margin-bottom: 60px;
-  margin-top:70px;
+  margin-top:130px;
 
   @include media(tablet) {
-    margin-left:60px;
+    margin-left:160px;
+    margin-top:180px;
+    margin-bottom: 90px;
+    padding-left: 24px;
   }
 
   @include media(desktop) {
-    margin-left:120px;
+    margin-left:260px;
+    margin-top:200px;
+    margin-bottom: 120px;
+    padding-left: 36px;
   }
 
   li {
-
-    font-size: 40px;
-    line-height: 46px;
+    font-size: 36px;
+    line-height: 42px;
     font-family:$font_bold;
 
     @include media(tablet) {
-      font-size: 86px;
-      line-height: 92px;
+      font-size: 46px;
+      line-height: 52px;
     }
 
+    @include media(desktop) {
+      font-size: 60px;
+      line-height: 66px;
+    }
   }
 }
 
@@ -124,19 +142,19 @@ ul.disciplines {
 
 .wrapper {
   min-height: 100%;
-  margin-bottom: -40px; 
+  margin-bottom: -40px;
 }
 .wrapper:after {
   content: "";
   display: block;
 }
-footer, 
+footer,
 .wrapper:after {
-  height: 40px; 
+  height: 40px;
 }
 
 footer {
-  width:100%;  
+  width:100%;
 }
 
 p {
