Change layout to include intro copy. Refactor colour and layout accordingly

--- a/assets/stylesheets/_variables.scss
+++ b/assets/stylesheets/_variables.scss
@@ -1,8 +1,13 @@
 
 // Colours
 $white: #fff;
-$brand-blue: #009FE3;
-$brand-blue-alpha: #59BCED;
+$black: #111;
+$brand-blue: #137FE0;
+$brand-blue-gradient-end: #0D56D8;
+$logo-colour: $white;
+$copy-colour: $black;
+$link-colour: $copy-colour;
+$background-colour:$white;
 
 // Layout parameters
 $left-margin: 60px;
