--- a/assets/stylesheets/public.digital.holding.scss
+++ b/assets/stylesheets/public.digital.holding.scss
@@ -24,22 +24,40 @@ html {
 }
 
 body {
-	background-color: $brand-blue;
-  background: rgba(0,159,227,1);
-  background: rgba(0,159,227,1);
-  background: -moz-linear-gradient(-45deg, rgba(0,159,227,1) 0%, rgba(0,83,227,1) 100%);
-  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(0,159,227,1)), color-stop(100%, rgba(0,83,227,1)));
-  background: -webkit-linear-gradient(-45deg, rgba(0,159,227,1) 0%, rgba(0,83,227,1) 100%);
-  background: -o-linear-gradient(-45deg, rgba(0,159,227,1) 0%, rgba(0,83,227,1) 100%);
-  background: -ms-linear-gradient(-45deg, rgba(0,159,227,1) 0%, rgba(0,83,227,1) 100%);
-  background: linear-gradient(135deg, rgba(0,159,227,1) 0%, rgba(0,83,227,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009fe3', endColorstr='#0053e3', GradientType=1 );
-  background-attachment: fixed;
+  background-color:$background-colour;
   font-family: $font_reg;
 	font-weight: 200;
 	font-style: normal;
-	color: $white;
+	color: $copy-colour;
   margin:0;
+
+  // padding:$left-margin/4;
+  //
+  // @include media(tablet) {
+  //   padding:15px 0 20px $left-margin/2;
+  // }
+  //
+  // @include media(desktop) {
+  //   padding:15px 0 20px $left-margin;
+  // }
+}
+
+main {
+  width:100%;
+  height:100%;
+}
+
+header {
+  background-color: $brand-blue;
+  background: $brand-blue;
+  background: -moz-linear-gradient(-45deg,  $brand-blue 0%, $brand-blue-gradient-end 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,$brand-blue), color-stop(100%,$brand-blue-gradient-end)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(-45deg,  $brand-blue 0%,$brand-blue-gradient-end 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(-45deg,  $brand-blue 0%,$brand-blue-gradient-end 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(-45deg,  $brand-blue 0%,$brand-blue-gradient-end 100%); /* IE10+ */
+  background: linear-gradient(135deg,  $brand-blue 0%,$brand-blue-gradient-end 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$brand-blue', endColorstr='$brand-blue-gradient-end',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
   padding:$left-margin/4;
 
   @include media(tablet) {
@@ -49,19 +67,15 @@ body {
   @include media(desktop) {
     padding:15px 0 20px $left-margin;
   }
-}
 
-main {
-  width:100%;
-  height:100%;
-}
-
-header {
 
   h1 {
+    display: block;
+    height:80px;
   	position:relative;
 	  font-size: 36px;
 	  font-family: $font_bold;
+    color:$logo-colour;
 		margin:0;
 
 		.public {
@@ -75,6 +89,7 @@ header {
 		}
 
     @include media(tablet) {
+      height:110px;
 	    font-size: 48px;
 
 	    .digital {
@@ -84,6 +99,7 @@ header {
 	  }
 
     @include media(desktop) {
+      height:130px;
 	    font-size: 60px;
 
 	    .digital {
@@ -93,6 +109,7 @@ header {
 	  }
 
     @include media(cinema) {
+      height:180px;
       font-size: 80px;
 
 	    .digital {
@@ -103,32 +120,39 @@ header {
   }
 }
 
-ul.disciplines {
-
-  display:none;
-  border-left:5px solid $brand-blue-alpha;
-  padding-left: 18px;
-  margin:130px 0 60px 0;
+.intro {
+  padding:30px $left-margin/4 0 $left-margin/4;
 
   @include media(tablet) {
-    margin:180px 0 90px 160px;
-    padding-left: 24px;
+    padding:30px 0 20px $left-margin/2;
   }
 
   @include media(desktop) {
-    margin:200px 0 120px 260px;
-    padding-left: 36px;
+    padding:30px 0 20px $left-margin;
+  }
+}
+
+ul.disciplines {
+
+  display:none;
+  padding:15px $left-margin/4 60px;
+
+  @include media(tablet) {
+    padding:30px 0 20px $left-margin/2;
   }
 
-  @include media(desktop_large) {
-    margin:260px 0 120px 360px;
-    padding-left: 36px;
+  @include media(desktop) {
+    margin-top: -152px;
+    padding:0 0 0 $left-margin * 8;
   }
 
-  @include media(cinema) {
-    margin:300px 0 120px 450px;
-    padding-left: 36px;
-  }
+  // @include media(desktop_large) {
+  //   padding:30px 0 0 $left-margin;
+  // }
+  //
+  // @include media(cinema) {
+  //   padding:30px 0 0 $left-margin;
+  // }
 
   li {
     font-size: 36px;
@@ -162,6 +186,10 @@ ul.disciplines {
 .wrapper {
   min-height: 100%;
   margin-bottom: -40px;
+
+  @include media(tablet) {
+    margin-bottom: -80px;
+  }
 }
 .wrapper:after {
   content: "";
@@ -170,21 +198,36 @@ ul.disciplines {
 footer,
 .wrapper:after {
   height: 40px;
+  @include media(tablet) {
+    height: 80px;
+  }
 }
 
 footer {
   width:100%;
+
+  padding:0 $left-margin/4;
+  @include media(tablet) {
+    padding:30px 0 0 $left-margin/2;
+  }
+
+  @include media(desktop) {
+    padding:30px 0 0 $left-margin;
+  }
+
+  p {
+    margin-bottom:0;
+  }
 }
 
 p {
-  font-size: 20px;
+  max-width:360px;
+  font-size: 16px;
+  margin-bottom:16px;
 
   @include media(desktop) {
-    font-size: 24px;
-  }
-
-  a {
-    font-family: $font_bold;
+    font-size: 18px;
+    margin-bottom:18px;
   }
 }
 
@@ -192,17 +235,18 @@ a,
 a:active,
 a:visited {
   text-decoration:none;
-  color:$white;
-  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAMAAACbgxyhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRF////AAAAVcLTfgAAAA5JREFUeNpiYCASAAQYAAApAAHHJj5mAAAAAElFTkSuQmCC');
+  color:$link-colour;
+  //background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAMAAACbgxyhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRF////AAAAVcLTfgAAAA5JREFUeNpiYCASAAQYAAApAAHHJj5mAAAAAElFTkSuQmCC');
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAMAAACbgxyhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRFERERAAAA2MjmOQAAAA5JREFUeNpiYCASAAQYAAApAAHHJj5mAAAAAElFTkSuQmCC');
   background-repeat: repeat-x;
   background-position: 0 93%;
 }
 
 ::selection {
-  color: $brand-blue;
-  background: $white;
+  color: $white;
+  background: $black;
 }
 ::-moz-selection {
-  color: $brand-blue;
-  background: $white;
+  color: $white;
+  background: $black;
 }
