--- a/assets/stylesheets/public.digital.holding.scss
+++ b/assets/stylesheets/public.digital.holding.scss
@@ -30,16 +30,6 @@ body {
 	font-style: normal;
 	color: $copy-colour;
   margin:0;
-
-  // padding:$left-margin/4;
-  //
-  // @include media(tablet) {
-  //   padding:15px 0 20px $left-margin/2;
-  // }
-  //
-  // @include media(desktop) {
-  //   padding:15px 0 20px $left-margin;
-  // }
 }
 
 main {
@@ -71,6 +61,7 @@ header {
 
   h1 {
     display: block;
+    visibility:hidden;
     height:80px;
   	position:relative;
 	  font-size: 36px;
@@ -134,7 +125,8 @@ header {
 
 ul.disciplines {
 
-  display:none;
+  display:inline-block;
+  visibility:hidden;
   padding:15px $left-margin/4 60px;
 
   @include media(tablet) {
@@ -145,14 +137,6 @@ ul.disciplines {
     margin-top: -152px;
     padding:0 0 0 $left-margin * 8;
   }
-
-  // @include media(desktop_large) {
-  //   padding:30px 0 0 $left-margin;
-  // }
-  //
-  // @include media(cinema) {
-  //   padding:30px 0 0 $left-margin;
-  // }
 
   li {
     font-size: 36px;
@@ -179,8 +163,14 @@ ul.disciplines {
 
 .wf-newrailalphabetbold-n7-active {
 	ul.disciplines {
-		display:inline-block;
+    visibility: visible;
 	}
+  header h1 {
+    visibility: visible;
+  }
+  footer p {
+    visibility: visible;
+  }
 }
 
 .wrapper {
@@ -216,6 +206,7 @@ footer {
   }
 
   p {
+    visibility:hidden;
     margin-bottom:0;
   }
 }
@@ -236,7 +227,6 @@ a:active,
 a:visited {
   text-decoration:none;
   color:$link-colour;
-  //background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAMAAACbgxyhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRF////AAAAVcLTfgAAAA5JREFUeNpiYCASAAQYAAApAAHHJj5mAAAAAElFTkSuQmCC');
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAMAAACbgxyhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRFERERAAAA2MjmOQAAAA5JREFUeNpiYCASAAQYAAApAAHHJj5mAAAAAElFTkSuQmCC');
   background-repeat: repeat-x;
   background-position: 0 93%;
