--- a/assets/stylesheets/public.digital.holding.scss
+++ b/assets/stylesheets/public.digital.holding.scss
@@ -10,7 +10,6 @@
 }
 
 html {
-  height:100%;
 	-webkit-text-size-adjust:none;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
@@ -20,8 +19,20 @@ html {
 }
 
 body {
-  height:100%;
-	background-color: $brand-blue;
+  font-family: $font_reg;
+	font-weight: 200;
+	font-style: normal;
+  margin: 0;
+  padding: 0;
+
+}
+
+main {
+  width:100%;
+}
+
+header {
+  background-color: $brand-blue;
   background: rgba(0,159,227,1);
   background: rgba(0,159,227,1);
   background: -moz-linear-gradient(-45deg, rgba(0,159,227,1) 0%, rgba(0,83,227,1) 100%);
@@ -32,85 +43,105 @@ body {
   background: linear-gradient(135deg, rgba(0,159,227,1) 0%, rgba(0,83,227,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009fe3', endColorstr='#0053e3', GradientType=1 );
   background-attachment: fixed;
-  font-family: $font_reg;
-	font-weight: 200;
-	font-style: normal;
-	color: $white;
-  margin:0;
-  padding:30px 15px;
+  color: $white;
+  padding: 15px;
 
-  @include media(desktop) {
-    padding:30px 20px 20px $left-margin;
+  @include media(tablet) {
+    padding: 15px 0 20px 30px;
   }
-}
-
-main {
-  width:100%;
-}
-
-header {
-  color:$white;
-  border-bottom:1px solid $brand-blue-alpha;
-  padding:0 0 15px 0;
 
   @include media(desktop) {
-    padding:0;
+    padding: 15px 0 20px 60px;
   }
 
   h1 {
-    text-indent:-5000px;
-    background-image:url(../images/public.digital.logo.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width:75px;
-    margin:0;
+    font-family: $font_bold;
+    position: relative;
+    display: block;
+    font-size: 36px;
+    height: 80px;
+    margin: 0;
+
+    span {
+      position: absolute;
+      &.digital {
+        top: 29px;
+        left: 21px;
+      }
+    }
+
+    @include media(tablet) {
+      font-size: 48px;
+      height: 110px;
+      span {
+        &.digital {
+          top: 39px;
+          left: 29px;
+        }
+      }
+    }
 
     @include media(desktop) {
-      width:90px;
-      height:65px;
+      font-size: 60px;
+      height: 130px;
+      span {
+        &.digital {
+          top: 48px;
+          left: 35px;
+        }
+      }
     }
+
   }
 }
 
 ul.disciplines {
 
   display:inline-block;
-  margin-bottom: 50px;
-  margin-top:50px;
-
-  @include media(tablet) {
-    margin-left:80px;
-  }
-
-  @include media(desktop) {
-    margin-left:120px;
-  }
+  margin-bottom: 30px;
 
   li {
 
     font-size: 40px;
     line-height: 50px;
-    font-family:$font_bold;
+    font-family: $font_bold;
 
     @include media(tablet) {
-      font-size: 86px;
-      line-height: 92px;
+
     }
 
   }
 }
 
-footer {
-  width:100%;
-  position:absolute;
-  bottom:25px;
+.content {
+  padding: 30px 15px;
+
+  @include media(tablet) {
+    padding: 40px 35% 60px 25%;
+  }
+
+  @include media(desktop) {
+    padding: 60px 25% 60px 35%;
+  }
+}
+
+h2 {
+  font-family: $font_bold;
+  margin-bottom: 20px;
+
+  @include media(desktop) {
+    font-size: 24px;
+    margin-bottom: 30px;
+  }
 }
 
 p {
   font-size: 20px;
+  margin-bottom: 20px;
 
   @include media(desktop) {
     font-size: 24px;
+    margin-bottom: 30px;
   }
 
   a {
@@ -121,8 +152,7 @@ p {
 a,
 a:active,
 a:visited {
-  text-decoration:none;
-  color:$white;
+  color: inherit;
 }
 
 ::selection {
